crucible-llvm-cli/test-data/strnlen.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* The branch in main at test-data/strnlen.cbl:33:14
    not (eq 0x0:[8] cf@26:bv)
* in main test-data/strnlen.cbl:39:5: g != 0
    not (eq 0x0:[8] cg@63:bv)
Prove:
  test-data/strnlen.cbl:46:5: error: in main
  strnlen(..., 3) when first 3 bytes non-null is 3
  not (eq 0x0:[8] cg@63:bv)
PROVED
